// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter with multi choice renders correctly 1`] = `
<styled.div
  onMouseDown={[Function]}
  visible={true}
>
  <styled.div>
    Filter Title
    <WithStyles(IconButton)
      aria-label="Close Filter Choices"
      onClick={[Function]}
    >
      <pure(Close) />
    </WithStyles(IconButton)>
  </styled.div>
  <WithStyles(List)>
    <WithStyles(ListItem)
      button={true}
      key="TEST_CHOICE_1"
      onClick={[Function]}
    >
      <WithStyles(Checkbox)
        checked={true}
        disableRipple={true}
        tabIndex={-1}
      />
      <WithStyles(ListItemText)
        primary="TEST_CHOICE_1_LABEL"
      />
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      button={true}
      key="TEST_CHOICE_2"
      onClick={[Function]}
    >
      <WithStyles(Checkbox)
        checked={true}
        disableRipple={true}
        tabIndex={-1}
      />
      <WithStyles(ListItemText)
        primary="TEST_CHOICE_2_LABEL"
      />
    </WithStyles(ListItem)>
  </WithStyles(List)>
</styled.div>
`;

exports[`Filter with single choice renders correctly 1`] = `
<styled.div
  onMouseDown={[Function]}
  visible={true}
>
  <styled.div>
    Filter Title
    <WithStyles(IconButton)
      aria-label="Close Filter Choices"
      onClick={[Function]}
    >
      <pure(Close) />
    </WithStyles(IconButton)>
  </styled.div>
  <WithStyles(List)>
    <WithStyles(ListItem)
      button={true}
      key="TEST_CHOICE_1"
      onClick={[Function]}
    >
      <WithStyles(Radio)
        checked={true}
        disableRipple={true}
        tabIndex={-1}
      />
      <WithStyles(ListItemText)
        primary="TEST_CHOICE_1_LABEL"
      />
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      button={true}
      key="TEST_CHOICE_2"
      onClick={[Function]}
    >
      <WithStyles(Radio)
        checked={false}
        disableRipple={true}
        tabIndex={-1}
      />
      <WithStyles(ListItemText)
        primary="TEST_CHOICE_2_LABEL"
      />
    </WithStyles(ListItem)>
  </WithStyles(List)>
</styled.div>
`;

exports[`Wrapper when not visible renders correctly 1`] = `
.c0 {
  background-color: #fff;
  border-radius: 0.2rem;
  box-shadow: 0 15px 12px rgba(0,0,0,0.22),0 0 38px rgba(0,0,0,0.3);
  margin-top: 0.3rem;
  min-width: 100%;
  opacity: 0;
  right: 0;
  -webkit-transform-origin: right top 0;
  -ms-transform-origin: right top 0;
  transform-origin: right top 0;
  -webkit-transform: scale3d(0.8,0.8,1);
  -ms-transform: scale3d(0.8,0.8,1);
  transform: scale3d(0.8,0.8,1);
  -webkit-transition: opacity 250ms cubic-bezier(0.8,0,0.6,1) 0ms, -webkit-transform 250ms cubic-bezier(0.8,0,0.6,1) 0ms,visibility 250ms;
  -webkit-transition: opacity 250ms cubic-bezier(0.8,0,0.6,1) 0ms, transform 250ms cubic-bezier(0.8,0,0.6,1) 0ms,visibility 250ms;
  transition: opacity 250ms cubic-bezier(0.8,0,0.6,1) 0ms, transform 250ms cubic-bezier(0.8,0,0.6,1) 0ms,visibility 250ms;
  visibility: hidden;
  z-index: 150;
  bottom: 0;
  position: fixed;
}

.c0 ul {
  max-height: 25.5rem;
  overflow: auto;
}

@media (min-width:36em) {
  .c0 {
    bottom: auto;
    position: absolute;
  }
}

<div
  class="c0"
>
  
</div>
`;

exports[`Wrapper when visible renders correctly 1`] = `
.c0 {
  background-color: #fff;
  border-radius: 0.2rem;
  box-shadow: 0 15px 12px rgba(0,0,0,0.22),0 0 38px rgba(0,0,0,0.3);
  margin-top: 0.3rem;
  min-width: 100%;
  opacity: 0;
  right: 0;
  -webkit-transform-origin: right top 0;
  -ms-transform-origin: right top 0;
  transform-origin: right top 0;
  -webkit-transform: scale3d(0.8,0.8,1);
  -ms-transform: scale3d(0.8,0.8,1);
  transform: scale3d(0.8,0.8,1);
  -webkit-transition: opacity 250ms cubic-bezier(0.8,0,0.6,1) 0ms, -webkit-transform 250ms cubic-bezier(0.8,0,0.6,1) 0ms,visibility 250ms;
  -webkit-transition: opacity 250ms cubic-bezier(0.8,0,0.6,1) 0ms, transform 250ms cubic-bezier(0.8,0,0.6,1) 0ms,visibility 250ms;
  transition: opacity 250ms cubic-bezier(0.8,0,0.6,1) 0ms, transform 250ms cubic-bezier(0.8,0,0.6,1) 0ms,visibility 250ms;
  visibility: hidden;
  z-index: 150;
  opacity: 1;
  -webkit-transform: scale3d(1,1,1);
  -ms-transform: scale3d(1,1,1);
  transform: scale3d(1,1,1);
  visibility: visible;
  bottom: 0;
  position: fixed;
}

.c0 ul {
  max-height: 25.5rem;
  overflow: auto;
}

@media (min-width:36em) {
  .c0 {
    bottom: auto;
    position: absolute;
  }
}

<div
  class="c0"
>
  
</div>
`;
